refactor: add query dto for comparisons
