# src/main/resources/openapi/openapi.yaml
@@ -298,6 +298,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PropertyEventDocument'
+        '400':
+          description: POST /query/event/values/valuesById response 400 if empty request.
   /query/event/values/valuesByName:
     post:
       operationId: query/event/values/byName
@@ -319,6 +321,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PropertyEventDocument'
+        '400':
+          description: POST /query/event/values/valuesByName response 400 if empty request.
   /query/event/values/history:
     post:
       operationId: query/event/values/history
@@ -340,6 +344,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PropertyEventDocument'
+        '400':
+          description: POST /query/event/values/history response 400 if empty request.
   /query/event/stats:
     post:
       operationId: query/event/stats
@@ -367,17 +373,57 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PropertiesByComparisonsAggregateRequest'
-        required: true
+              $ref: '#/components/schemas/PropertiesByComparisonsRequestDto'
       responses:
         '200':
           description: POST /query/event/comparison response 200
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PropertiesByComparisonsAggregateResponse'
+                type: array
+                items:
+                  $ref: '#/components/schemas/PropertiesByComparisonsAggregateResponse'
 components:
   schemas:
+    PropertyComparisonDto:
+      type: object
+      required:
+        - propertyName
+        - comparison
+        - value
+      properties:
+        propertyName:
+          type: string
+        comparison:
+          type: string
+          enum: [ GT, GTE, LT, LTE, EQ ]
+        value:
+          oneOf:
+            - type: number
+            - type: string
+            - type: boolean
+    PropertiesByComparisonsRequestDto:
+      type: object
+      required:
+        - comparisons
+      properties:
+        comparisons:
+          type: array
+          items:
+            $ref: '#/components/schemas/PropertyComparisonDto'
+        modelNames:
+          type: array
+          items:
+            type: string
+          nullable: true
+        from:
+          type: string
+          format: date-time
+          nullable: true
+        to:
+          type: string
+          format: date-time
+          nullable: true
     mqtt-physical-interface:
       type: object
       title: mqtt-physical-interface
